--- a/tests/smoke/kotlin/src/test/resources/properties/V2/aims-celr-hl7/aims-celr-hl7.properties
+++ b/tests/smoke/kotlin/src/test/resources/properties/V2/aims-celr-hl7/aims-celr-hl7.properties
@@ -4,9 +4,12 @@ data_producer_id=null
 jurisdiction=null
 received_filename=10KB-test-file
 data_stream_id=celr
-data_stream_route=csv
+data_stream_route=hl7v2
 meta_ext_objectkey=null
 meta_ext_file_timestamp=null
 meta_ext_filestatus=null
 meta_ext_uploadid=null
 meta_ext_source=null
+
+
+
