--- a/tests/smoke/kotlin/src/test/resources/properties/V2/dextesting-testevent1/dextesting-testevent1.properties
+++ b/tests/smoke/kotlin/src/test/resources/properties/V2/dextesting-testevent1/dextesting-testevent1.properties
@@ -1,6 +1,7 @@
+version=2.0
 sender_id=test-sender
-data_producer_id=test-producerId
+data_producer_id=test-producer-id
 jurisdiction=test-jurisdiction
-received_filename=10KB-test-file
+received_filename=100KB-test-file
 data_stream_id=dextesting
 data_stream_route=testevent1
