--- a/tests/smoke/kotlin/src/test/resources/properties/V2/daart-hl7/no-event.properties
+++ b/tests/smoke/kotlin/src/test/resources/properties/V2/daart-hl7/no-event.properties
@@ -3,8 +3,7 @@ sender_id=APHL
 data_producer_id=test-data-producer
 jurisdiction=test-jurisdiction
 received_filename=10KB-test-file
-data_stream_id=test-data_stream_id
-data_stream_route=meta_ext_event
+data_stream_id=daart
 original_file_timestamp=null
 message_type=ELR
 route=DAART
