--- a/upload-server/docker-compose.yml
+++ b/upload-server/docker-compose.yml
@@ -30,7 +30,7 @@ services:
       - GF_SECURITY_ADMIN_USER=admin
       - GF_SECURITY_ADMIN_PASSWORD=grafana
     volumes:
-      - ./grafana:/etc/grafana/provisioning/datasources
+      - ./grafana/provisioning:/etc/grafana/provisioning
   cache:
     image: redis:alpine
     restart: always
