--- a/upload-server/docker-compose.yml
+++ b/upload-server/docker-compose.yml
@@ -1,24 +1,24 @@
 version: "3.9"
 services:
   #azurite:
-    #image: mcr.microsoft.com/azure-storage/azurite
-    #container_name: "azurite"
-    #hostname: azurite
-    #restart: always
-    #ports:
-      #- "10000:10000"
-      #- "10001:10001"
-      #- "10002:10002"
+  #image: mcr.microsoft.com/azure-storage/azurite
+  #container_name: "azurite"
+  #hostname: azurite
+  #restart: always
+  #ports:
+  #- "10000:10000"
+  #- "10001:10001"
+  #- "10002:10002"
   prometheus:
     image: prom/prometheus
     container_name: prometheus
     command:
-      - '--config.file=/etc/prometheus/prometheus.yml'
+      - "--config.file=/etc/prometheus/prometheus.yml"
     ports:
       - 9090:9090
     restart: unless-stopped
     volumes:
-      - ./local/prometheus:/etc/prometheus
+      - ./config/local/prometheus:/etc/prometheus
       - prom_data:/prometheus
   grafana:
     image: grafana/grafana
@@ -30,12 +30,12 @@ services:
       - GF_SECURITY_ADMIN_USER=admin
       - GF_SECURITY_ADMIN_PASSWORD=grafana
     volumes:
-      - ./local/grafana/provisioning:/etc/grafana/provisioning
+      - ./config/local/grafana/provisioning:/etc/grafana/provisioning
   cache:
     image: redis:alpine
     restart: always
     ports:
-      - '6379:6379'
+      - "6379:6379"
     command: redis-server
   upload-server:
     image: golang:alpine
@@ -52,7 +52,7 @@ services:
       #- DEX_MANIFEST_CONFIG_CONTAINER_NAME=config
       - TUS_REDIS_LOCK_URI=redis://redispw@cache:6379
     ports:
-      - '8080:8080'
+      - "8080:8080"
     command: go run ./...
     depends_on:
       #- azurite
