--- a/.github/workflows/swagger-docs-gh-pages.yml
+++ b/.github/workflows/swagger-docs-gh-pages.yml
@@ -13,7 +13,7 @@ on:
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
-  contents: read
+  contents: write
   pages: write
   id-token: write
 
@@ -41,19 +41,15 @@ jobs:
     steps:
       - name: Checkout GitHub Pages Branch
         uses: actions/checkout@v4
-        with:
-          ref: gh-pages
       - name: Download Docs
         uses: actions/download-artifact@v4
         with:
           name: swagger-docs
           path: .
       - name: Push Swagger Docs
-        timeout-minutes: 3
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add .
           git commit -m "workflow: updating swagger documents"
           git push
-
