--- a/.github/workflows/swagger-docs-gh-pages.yml
+++ b/.github/workflows/swagger-docs-gh-pages.yml
@@ -36,22 +36,9 @@ jobs:
           name: swagger-docs
           path: docs/
   deploy:
-    runs-on: ubuntu-latest
     needs: [build]
-    steps:
-      - name: Checkout GitHub Pages Branch
-        uses: actions/checkout@v4
-        with:
-          ref: gh-pages
-      - name: Download Docs
-        uses: actions/download-artifact@v4
-        with:
-          name: swagger-docs
-          path: .
-      - name: Push Swagger Docs
-        run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git add .
-          git commit -m "workflow: updating swagger documents"
-          git push
+    uses: ./.github/workflows/deploy-to-ghpages.yml
+    with:
+      ARTIFACT_ID: swagger-docs
+      DEPLOY_TO: .
+      COMMIT_MSG: "Updating Swagger Docs"
