--- a/.github/workflows/push-to-gh-pages.yml
+++ b/.github/workflows/push-to-gh-pages.yml
@@ -26,23 +26,44 @@ on:
 #   cancel-in-progress: false
 
 jobs:
-  push-to-ghpages:
+  push-to-branch:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout GitHub Pages Branch
         uses: actions/checkout@v4
         with:
           ref: gh-pages
-      - name: Download Docs
+      - name: Download Artifact
         uses: actions/download-artifact@v4
         with:
           name: ${{ inputs.ARTIFACT_ID }}
           path: ${{ inputs.DEPLOY_TO }}
-      - name: Push Swagger Docs
+      - name: Push to GitHub Pages Branch
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add ${{ inputs.DEPLOY_TO }}
           git commit -m "${{ inputs.COMMIT_MSG }}"
           git push
+  deploy-to-pages:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: push-to-branch
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          ref: gh-pages
+      - name: Setup Pages
+        uses: actions/configure-pages@v5
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          # Upload entire repository
+          path: '.'
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
 
