--- a/.github/workflows/push-to-gh-pages.yml
+++ b/.github/workflows/push-to-gh-pages.yml
@@ -14,16 +14,8 @@ on:
         required: true
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
-# permissions:
-#   contents: write
-#   pages: write
-#   id-token: write
-
-# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
-# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
-# concurrency:
-#   group: 'pages'
-#   cancel-in-progress: false
+permissions:
+  contents: write
 
 jobs:
   push-to-branch:
@@ -44,26 +36,11 @@ jobs:
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add ${{ inputs.DEPLOY_TO }}
           git commit -m "${{ inputs.COMMIT_MSG }}"
+          git pull --rebase
           git push
-  deploy-to-pages:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
-    needs: push-to-branch
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-        with:
-          ref: gh-pages
-      - name: Setup Pages
-        uses: actions/configure-pages@v5
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
-        with:
-          # Upload entire repository
-          path: '.'
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
-
+      - run: |
+          if [[ ${{ inputs.DEPLOY_TO }} == '.' ]]; then
+            echo "Deployed to https://cdcgov.github.io/data-exchange-upload/" >> "$GITHUB_STEP_SUMMARY"
+          else
+            echo "Deployed to https://cdcgov.github.io/data-exchange-upload/${{ inputs.DEPLOY_TO }}" >> "$GITHUB_STEP_SUMMARY"
+          fi
